working on js for reservations

--- a/table.html
+++ b/table.html
@@ -20,7 +20,7 @@
     <div class='container' style='margin-bottom: 1em;'>
         <div class="card">
             <h6 class="card-header">Current Reservations</h6>
-            <div class="card-body">
+            <div class="card-body" id='reservations'>
 
             </div>
         </div>
@@ -29,19 +29,22 @@
     <div class='container'>
         <div class="card">
             <h6 class="card-header">Waiting List</h6>
-            <div class="card-body">
+            <div class="card-body" id='waitList'>
                 
             </div>
         </div>
     </div>
 
     <footer class='container' style='margin-top: 1em;'>
+        <p>Control Panel</p>
         <p>
-            <a href='/table'>API Table Link</a>
+            <a href=''>Clear Table</a>
             |
-            <a href='/reservations'>API Wait List</a>
+            <a href='/reserv'>API Table Link</a>
             |
-            <a href='https://github.com/afhaque/HotRestaurant'>GitHub Repo</a>
+            <a href='/api/waitList'>API Wait List</a>
+            |
+            <a href='https://github.com/afhaque/HotRestaurant' target='_aboutblank'>GitHub Repo</a>
         </p>
     </footer>
 
