--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     
     <footer class='container'>
         <p>
-            <a href='/table'>API Table Link</a>
+            <a href='/reserv'>API Table Link</a>
             |
-            <a href='/reservations'>API Wait List</a>
+            <a href='/api/waitList'>API Wait List</a>
             |
-            <a href='https://github.com/afhaque/HotRestaurant'>GitHub Repo</a>
+            <a href='https://github.com/afhaque/HotRestaurant' target='_aboutblank'>GitHub Repo</a>
         </p>
     </footer>
 
