--- a/reservations.html
+++ b/reservations.html
@@ -24,39 +24,57 @@
             </div>
             <div class='card-body'>
                 <form>
-                    <div class="form-grou">
-                        <label for="formGroupExampleInput">Name</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name">
                     </div>
                     <div class="form-group">
-                        <label for="formGroupExampleInput2">Phone Number</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2">
+                        <label for="phoneNumber">Phone Number</label>
+                        <input type="text" class="form-control" id="phoneNumber">
                     </div>
                     <div class="form-group">
-                        <label for="formGroupExampleInput">Email</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput3">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="email">
                     </div>
                     <div class="form-group">
-                        <label for="formGroupExampleInput2">Unique ID</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput4">
+                        <label for="uniqueID">Unique ID</label>
+                        <input type="text" class="form-control" id="uniqueID">
                     </div>
                 </form>
             </div>
             <div class='container' style='margin-bottom: 1em;'>
-                <a class="btn btn-primary btn-lg" href="/table" role="button">Submit</a>
+                <a class="btn btn-primary btn-lg" role="button" id='addReserv'>Submit</a>
             </div>
         </div>
     </div>
 
     <footer class='container' style='margin-top: 1em;'>
         <p>
-            <a href='/table'>API Table Link</a>
+            <a href='/reserv'>API Table Link</a>
             |
-            <a href='/reservations'>API Wait List</a>
+            <a href='/api/waitList'>API Wait List</a>
             |
-            <a href='https://github.com/afhaque/HotRestaurant'>GitHub Repo</a>
+            <a href='https://github.com/afhaque/HotRestaurant' target='_aboutblank'>GitHub Repo</a>
         </p>
     </footer>
+
+    <script type='text/javascript'>
+        $('#addReserv').on('click', function(event) {
+            event.preventDefault();
+
+            var newReserv = {
+                name: $('#name').val().trim(),
+                phoneNumber: $('#phoneNumber').val().trim(),
+                email: $('#email').val().trim(),
+                uniqueID: $('#uniqueID').val().trim()
+            };
+
+            $.post('/api/reserv', newReserv)
+                .then(function(data) {
+                    alert('Reservation has been created.')
+                })
+        })
+    </script>
 
     <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
